--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "component-npm",
+  "name": "sunbridger-api-mv",
   "version": "1.0.0",
-  "description": "npm包发布的一个预设仓库",
+  "description": "合法合理爬取热点梨视频，若有冒犯，请email告知，谢谢",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
